# texase

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  development.org  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/asetui/: addcolumn.py  app.py  asetui.css  asetui.py  data.py  details.py  edit.py  filter.py  filter_suggester.py  formatting.py  help.py  keys.py  saved_columns.py  search.py  table.py  yesno.py
src/texase/: addcolumn.py  app.py  cache_files.py  data.py  details.py  edit.py  files_io.py  filter.py  formatting.py  help.py  input_screens.py  keys.py  saved_columns.py  saved_float_precision.py  search.py  table.py  texase.tcss  validators.py  yesno.py
tests/: conftest.py  shared_info.py  test_app.py  test_cache.py  test_column_decimals.py  test_data.py  test_db_to_df.py  test_delete.py  test_details.py  test_edit.py  test_edit_add_and_delete.py  test_edit_and_add.py  test_files_io.py  test_filter.py  test_formatting.py  test_help.py  test_keybox.py  test_marking.py  test_saved_columns.py  test_search.py  test_table.py  test_update.py  test_view.py
