[tool.poetry]
name = "texase"
version = "0.1.0"
description = "Textual user interface for ASE db."
authors = ["Steen Lysgaard <stly@dtu.dk>"]
license = "MPL"
readme = "README.md"
packages = [{include = "texase", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
ase = ">=3.19.0"
textual = "0.47.0"
pandas = "^2.0.3"
typer = "^0.9.0"

[tool.poetry.scripts]
texase = 'texase.app:main'

[tool.poetry.group.dev.dependencies]
textual-dev = "1.4.0"
pytest = "^7.4.4"
black = "^22.12.0"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
executionEnvironments = [ { root = "src" } ]
