[project]
name = "texase"
version = "0.2.2b"
description = "Textual user interface for ASE db."
authors = [{ name = "Steen Lysgaard", email = "stly@dtu.dk" }]
# Python version less than 3.13 since pillow 10.3.0 fails on
# 3.13. Pillow is a dependency of matplotlib which is a dependency of
# ASE
requires-python = "~=3.9"
readme = "README.md"
license = "MPL-2.0"
dependencies = [
    "ase>=3.19.0",
    "pillow>=11",
    "textual>=0.87.0",
    "pandas>=2.2.3,<3",
    "typer>=0.9.0,<0.10",
    "pytest-xvfb>=3.0.0,<4",
    "typing-extensions>=4.12.2 ; python_full_version >= '3.13'",
]

[project.scripts]
texase = "texase.app:typer_app"

[dependency-groups]
dev = [
    "textual-dev==1.4.0",
    "pytest>=8.2.0",
    "black>=22.12.0,<23",
    "pytest-cov>=2.12.1,<3",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=3.7.0,<4",
]

[tool.hatch.build.targets.sdist]
include = ["src/texase"]

[tool.hatch.build.targets.wheel]
include = ["src/texase"]

[tool.hatch.build.targets.wheel.sources]
"src/texase" = "texase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
executionEnvironments = [ { root = "src" } ]
reportArgumentType = false
reportUnusedCallResult = false
reportUnusedExpression = false

[tool.uv]
python-preference = "system"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'function'
